# src/database/entities/treatment-situation.enum.ts
@@ -3,4 +3,9 @@ export enum TreatmentSituation {
   PENDIENTE_DE_INICIO = 'PENDIENTE_DE_INICIO',
   INTERRUMPIDO = 'INTERRUMPIDO',
   FINALIZADO = 'FINALIZADO',
+  SEARCHING = 'SEARCHING',
+  ABANDONED = 'ABANDONED',
+  DECEASED_DURING_TREATMENT = 'DECEASED_DURING_TREATMENT',
+  NOT_APPLICABLE = 'NOT_APPLICABLE',
+  REMISSION = 'REMISSION',
 }
