# src/modules/patients/clinical/diagnoses/dto/create-patient-diagnosis.dto.ts
@@ -24,5 +24,6 @@ export class CreatePatientDiagnosisDto {
   @Type(() => DurationDto)
   waitTimeForDiagnosis?: DurationDto;
   @IsOptional() @IsBoolean() hasMedicalReport?: boolean;
+  @IsOptional() @IsBoolean() isSepaActiveReferral?: boolean;
   @IsOptional() @IsString() changeReason?: string;
 }
